# langchain-qaip

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish-pypi.yml  publish-testpypi.yml
langchain_qai/: __init__.py  retriever.py
langchain_qaip/: __init__.py  retriever.py
