[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
authors = []
license = { text = "MIT" }
requires-python = ">=3.11.0"
dependencies = [
    "langchain-core>=0.3.45",
    "requests>=2.32.3",
]
name = "langchain-qaip"
version = "0.1.2"
description = "An integration package connecting QAIP and LangChain"
readme = "README.md"

[project.urls]
repository = "https://github.com/qlonolink/langchain-qaip"
