[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[project]
authors = []
license = { text = "MIT" }
requires-python = ">=3.11.0"
dependencies = [
    "langchain-core>=0.3.45",
]
name = "langchain-qaip"
version = "0.1.5"
description = "An integration package connecting QAIP and LangChain"
readme = "README.md"

[project.urls]
repository = "https://github.com/qlonolink/langchain-qaip"

[tool.uv.build-backend]
module-root = ""
